# messagebird_dashboard

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DECISIONS.md  Dockerfile  GLASSMORPHISM-REDESIGN.md  LICENSE  PLAN_SYNC_SCHEMA_FIXES.md  README.md  ROADMAP.md  SIMPLIFICATION.md  alembic.ini  business_bsc.yaml.example  business_config.yaml.example  docker-compose.yml  main.py  pyproject.toml  sync_months.sh
alembic/: env.py
alembic/versions/: 001_initial.py
api/: AGENTS.md  __init__.py  auth.py  dependencies.py  logging_config.py  main.py  middleware.py  sync_utils.py
api/routes/: admin.py  auth.py  conversations.py  dashboard.py  reports.py
api/schemas/: __init__.py  _base.py  admin.py  auth.py  conversations.py  dashboard.py  reports.py
application/: AGENTS.md  __init__.py
application/interfaces/: exporter.py  repository.py
application/services/: __init__.py  auditoria_contatos_service.py  auditoria_demanda_service.py  auditoria_os_service.py  bsc_kpi.py  export_service.py  report_aggregator.py  sub_aggregators.py
application/use_cases/: data_quality_report.py  generate_report.py  sync_database.py
backups/: pre-redesign-20260722-134854.dump
docs/: AGENTS.md  API.md  ARCHITECTURE.md  CHECKLIST.md  CONFIG.md  DATABASE.md  FRONTEND.md  IMPROVEMENTS_CHECKLIST.md  KPI_BSC.md  PLAN_SYNC_FIXES.md  README.md  REPORTS.md  STACK.md  SYNC_PIPELINE.md  TESTING.md  deploy.md  improvements.md  plano_web_dashboard.md
domain/: AGENTS.md  __init__.py  constants.py  logic.py
domain/entities/: __init__.py  report_data.py
domain/metrics/: art.py  duration.py  frt.py
domain/services/: __init__.py  metrics_calculator.py
domain/strategies/: metrics_strategy.py
frontend/: AGENTS.md  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: useAuth.ts  useBscScorecard.ts  useConversations.ts  useDashboard.ts  useExecutive.ts  useExportConversations.ts  useKeyboardShortcuts.ts
frontend/lib/: api.ts  logger.ts  utils.ts
frontend/public/: favicon.ico-svg
frontend/types/: index.ts
infrastructure/: AGENTS.md  __init__.py  cache.py
infrastructure/api/: __init__.py  client.py  config.py  sync.py
infrastructure/config/: config_loader.py  sync_profiles.py
infrastructure/database/: __init__.py  connection.py  init_db.py  postgres_connection.py  queries.py  queries_pg.py  sqlite_repository.py  sync_connection.py  sync_connection_pg.py
infrastructure/exporters/: _bsc_writer.py  csv_exporter.py  excel_exporter.py  markdown_exporter.py  metrics_cache.py  pdf_exporter.py  xlsx_exporter.py
infrastructure/repositories/: postgres_report_repository.py
infrastructure/sync/: pg_sync_engine.py  sync_contacts.py  sync_conversations.py  sync_core.py  sync_messages.py  sync_surveys.py
reports/: .gitkeep
scripts/: backup-db.sh  migrate_sqlite_to_pg.py  restore-db.sh
tests/: AGENTS.md  conftest.py  test_health.py
tests/api/: conftest.py  test_admin.py  test_auth.py  test_conversations.py  test_dashboard.py  test_reports.py
tests/application/: __init__.py
tests/domain/: __init__.py  test_dept_routing.py  test_logic.py
(+86 files in other folders)
