[project]
name = "mbird-web"
version = "2.0.0"
description = "Omnichannel Reporting Tool - Web API + Dashboard"
requires-python = ">=3.14"
dependencies = [
    # API
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.13.0",
    # Auth
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    # Database
    "asyncpg>=0.31.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "alembic>=1.18.5",
    # Config
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    # HTTP Client
    "httpx>=0.27.0",
    # Scheduler
    "apscheduler>=3.10.0",
    # Reports
    "xlsxwriter>=3.1.9",
    "fpdf2>=2.8.0",
    # CLI / Legacy compat
    "rich>=13.7.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["api", "domain", "application", "infrastructure"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m not integration')",
]

[tool.mypy]
python_version = "3.14"
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api/", "domain/", "application/", "infrastructure/"]
